- The "Players" panel has been removed. This information can now be viewed by
  hovering the cursor over a player's avatar.
- The poison counters value has been moved to next to a players life total.
  This is only visible if the player has any poison counters.
- The poison counters button has been replaced with a Command Zone button.
  The command zone panels have been removed.


- Display tokens on the same row as other cards / on their own row -
By default the game now displays tokens on the same row as non-token cards (and
to the right of them), which makes the game use the battlefield space more
effectively. For example, creature tokens are displayed to the right of regular
non-token creatures in the same row. If you prefer the classic Forge behavior
(when tokens are displayed on their own row), the option that controls this 
behavior can be found in Forge preferences under "Graphic Options". It is called
"Display Tokens in a Separate Row".


- Network play (BETA) -
This version of Forge includes a preliminary version of peer-to-peer (P2P)
network support. If one player hosts, other players can connect to that
player's machine by filling out the corresponding IP address and port number
(default 36743), provided the lobby contains one or more open player slots.
Do not expect network support to work reliably yet, any bug reports or other
comments are welcome!


- Smarter Deck Color Determination -
When determining the color of decks, colors of hybrid and phyrexian cards are no
longer considered unless they can be produced by a land in the deck


- Land Color Filtering in Deck Editor -
When filtering colors in the Deck Editor, lands that produce all selected colors will now be shown
This means if you filter to show only green and white cards, lands that produce green and white will now be shown
This should hopefully make finding multicolor lands for your decks easier


- Quest Starting Pool Configuration -