@@ -162,6 +162,11 @@ public class SettingsPage extends TabPage<SettingsScreen> {
                 "Show Match Background",
                 "Show match background image on battlefield, otherwise background texture shown instead."),
                 4);
+        lstSettings.addItem(new CustomSelectSetting(FPref.UI_DISPLAY_COLOR_IDENTITY,
+                "Display Color Identity",
+                "Displays the color identity of cards in the card detail information panel.",
+                new String[]{"Never", "Only Multicolor", "Always"}),
+                4);
 
         //Card Overlays
         lstSettings.addItem(new BooleanSetting(FPref.UI_SHOW_CARD_OVERLAYS,
