@@ -31,6 +31,17 @@ The interface has received several small changes.
   The command zone panels have been removed.
 
 
+- Display Color Identity -
+There's a new option "Display Color Identity" in both desktop and mobile Forge 
+that allows you to display the current color identity of cards. It's disabled
+by default (set to "Never") but can be toggled to "Always" (which displays color
+identity for all cards, even mono-color) or to "Only Multicolor" (which only
+displays color identity of cards that are currently of two or more colors). This
+might help with effects such as Painter's Servant which add colors to cards and
+which make all cards display with the gold border. The option is currently found
+under "Graphic Options" for both versions of Forge.
+
+
 - Display tokens on the same row as other cards / on their own row -
 By default the game now displays tokens on the same row as non-token cards (and
 to the right of them), which makes the game use the battlefield space more
